Modernize CTI servers with virtual threads and Java 21 idioms
- CTIServer: run each connection on a virtual thread
  (newThreadPerTaskExecutor); concurrency is still capped by permits
- RestServlet: ConcurrentHashMap session registry with a null-safe
  lookup, LongAdder access counter (the volatile increment raced),
  virtual-thread session cleaner stopped from destroy(), and a string
  switch for action dispatch
- RestSession: record-based Message, async transcode on a virtual
  thread, modernized iteration
- V2ProtocolProcessor: arrow-form packet switch with a shared
  TranscoderException abort path

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>